--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,6 +13,8 @@ sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
+flask-bcrypt = "*"
+python-dotenv = "*"
 [dev-packages]
 
 [requires]
