--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/themes": "^2.0.3",
     "react-router-dom": "^6.21.3"
