--- a/client/package.json
+++ b/client/package.json
@@ -4,5 +4,9 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/themes": "^2.0.3",
     "react-router-dom": "^6.21.3"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "hardhat": "^2.19.5"
   }
 }
